--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
+    "sweetalert2": "^11.1.4",
+    "sweetalert2-react-content": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
