--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12"
   }
 }
