--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
