--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-multi-carousel": "^2.6.5",
     "react-player": "^2.9.0",
