MERCADO PAGO OK!!!!!

--- a/api/.env
+++ b/api/.env
@@ -4,5 +4,6 @@ DB_PASSWORD=TmHt1mIV6KGip2QW
 DB_NAME=dbsistema
 HOST_FRONT=localhost:3000
 HOST_BACK=3001
+PROD_ACCESS_TOKEN=TEST-1552734666431700-091722-606be4cedc1d313cd2ded10c7ac07635-826343226
 
  SECRET= user_api
